--- a/SubEthaEdit-Mac/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/PlainTextEditor.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PlainTextEditor">
@@ -94,8 +94,8 @@
                         <button id="cPs-Ka-upO">
                             <rect key="frame" x="583" y="0.0" width="17" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" alternateImage="EditorRemoveSplit" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
-                                <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
+                                <behavior key="behavior" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
                             <connections>
@@ -171,13 +171,13 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                             <connections>
+                                <binding destination="UOY-gY-y9M" name="toolTip" keyPath="selection.localizedToolTipToggleParticipantsButton" id="9KJ-o0-HP2"/>
                                 <binding destination="UOY-gY-y9M" name="value" keyPath="selection.numberOfActiveParticipants" id="fVh-cW-zcy"/>
                                 <binding destination="UOY-gY-y9M" name="hidden" keyPath="selection.showsNumberOfActiveParticipants" id="3lD-7H-ULp">
                                     <dictionary key="options">
                                         <string key="NSValueTransformerName">NSNegateBoolean</string>
                                     </dictionary>
                                 </binding>
-                                <binding destination="UOY-gY-y9M" name="toolTip" keyPath="selection.localizedToolTipToggleParticipantsButton" id="9KJ-o0-HP2"/>
                             </connections>
                         </textField>
                         <button id="OwG-YH-zbO">
@@ -276,7 +276,6 @@
         <image name="BottomBarSharingIconAnnounce_Inactive" width="15" height="11"/>
         <image name="BottomBarSharingIconGroup" width="16" height="11"/>
         <image name="EditorAddSplit" width="10" height="12"/>
-        <image name="EditorRemoveSplit" width="10" height="12"/>
         <image name="WaitPipe" width="13" height="12"/>
     </resources>
 </document>
