--- a/SubEthaEdit-Mac/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
@@ -51,22 +51,15 @@
                     </userDefinedRuntimeAttributes>
                 </customView>
                 <customView id="27" userLabel="Top Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="383" width="600" height="17"/>
+                    <rect key="frame" x="0.0" y="382" width="600" height="18"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
-                            <rect key="frame" x="0.0" y="-2" width="600" height="5"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <font key="titleFont" metaFont="system"/>
-                        </box>
                         <customView id="61" customClass="PopUpButton">
-                            <rect key="frame" x="71" y="0.0" width="178" height="17"/>
+                            <rect key="frame" x="71" y="0.0" width="178" height="18"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                         <textField verticalHuggingPriority="750" id="25">
-                            <rect key="frame" x="401" y="-1" width="181" height="17"/>
+                            <rect key="frame" x="401" y="0.0" width="181" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="&lt;written by ....>" id="91">
                                 <font key="font" metaFont="smallSystem"/>
@@ -75,7 +68,7 @@
                             </textFieldCell>
                         </textField>
                         <textField toolTip="Cursor position" verticalHuggingPriority="750" id="13" customClass="BorderedTextField">
-                            <rect key="frame" x="0.0" y="0.0" width="179" height="17"/>
+                            <rect key="frame" x="0.0" y="0.0" width="179" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="&lt;Position>" id="90">
                                 <font key="font" metaFont="smallSystem"/>
@@ -92,7 +85,7 @@
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="WaitPipe" id="92"/>
                         </imageView>
                         <button id="cPs-Ka-upO">
-                            <rect key="frame" x="583" y="0.0" width="17" height="17"/>
+                            <rect key="frame" x="583" y="0.0" width="18" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
                                 <behavior key="behavior" lightByContents="YES"/>
@@ -102,6 +95,13 @@
                                 <action selector="toggleSplitView:" target="-1" id="7FJ-Xy-kDn"/>
                             </connections>
                         </button>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
+                            <rect key="frame" x="0.0" y="-2" width="600" height="5"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <font key="titleFont" metaFont="system"/>
+                        </box>
                     </subviews>
                     <backgroundFilters>
                         <ciFilter name="CIColorControls">
@@ -121,34 +121,27 @@
                     </backgroundFilters>
                 </customView>
                 <customView wantsLayer="YES" id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="17"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="18"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="7">
-                            <rect key="frame" x="0.0" y="14" width="598" height="5"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <font key="titleFont" metaFont="system"/>
-                        </box>
                         <customView toolTip="Document mode" id="75" customClass="PopUpButton">
-                            <rect key="frame" x="-5" y="0.0" width="95" height="17"/>
+                            <rect key="frame" x="0.0" y="0.0" width="90" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView toolTip="Tab settings" id="84" customClass="PopUpButton">
-                            <rect key="frame" x="87" y="0.0" width="85" height="17"/>
+                            <rect key="frame" x="87" y="0.0" width="85" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView toolTip="Line endings" id="81" customClass="PopUpButton">
-                            <rect key="frame" x="170" y="0.0" width="49" height="17"/>
+                            <rect key="frame" x="170" y="0.0" width="49" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView toolTip="File encoding" id="77" customClass="PopUpButton">
-                            <rect key="frame" x="217" y="0.0" width="243" height="17"/>
+                            <rect key="frame" x="217" y="0.0" width="243" height="18"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
                         <button wantsLayer="YES" id="7Mi-Cu-bLB">
-                            <rect key="frame" x="459" y="0.0" width="21" height="17"/>
+                            <rect key="frame" x="459" y="0.0" width="21" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAnnounce_Inactive" imagePosition="only" alignment="center" alternateImage="BottomBarSharingIconAnnounce" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="4l5-Nu-6M1">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
@@ -163,7 +156,7 @@
                             </connections>
                         </button>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Icy-2O-9Qz" userLabel="Participant Count Label">
-                            <rect key="frame" x="481" y="1" width="18" height="14"/>
+                            <rect key="frame" x="481" y="2" width="18" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="right" title="1" id="ak1-Tg-g3g">
                                 <font key="font" metaFont="smallSystem"/>
@@ -181,7 +174,7 @@
                             </connections>
                         </textField>
                         <button id="OwG-YH-zbO">
-                            <rect key="frame" x="493" y="0.0" width="27" height="17"/>
+                            <rect key="frame" x="493" y="0.0" width="27" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconGroup" imagePosition="only" alignment="center" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="tKL-KY-Fjg">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -193,7 +186,7 @@
                             </connections>
                         </button>
                         <button id="bv6-mv-CIq">
-                            <rect key="frame" x="523" y="0.0" width="26" height="17"/>
+                            <rect key="frame" x="523" y="0.0" width="26" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAdd" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="HOp-Np-jFU">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -217,6 +210,13 @@
                                 <action selector="toggleWrapMode:" target="-1" id="87"/>
                             </connections>
                         </textField>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="Om0-hK-qCA">
+                            <rect key="frame" x="0.0" y="15" width="600" height="5"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <font key="titleFont" metaFont="system"/>
+                        </box>
                     </subviews>
                     <backgroundFilters>
                         <ciFilter name="CIColorControls">
